--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ li {
 }
 
 .header {
-  background-color: #26d0c9;
+  background-color: #26d;
   color: #fff;
   height: 90px;
 }
@@ -18,12 +18,8 @@ li {
   padding: 20px 40px;
 }
 
-.header-list li {
-  float: left;
-  padding: 33px 20px;
-}
-
 .main {
+  background-image:url(IMG_0228.JPG);
   padding: 100px 80px;
 }
 
@@ -72,7 +68,7 @@ li {
 
 
 .footer {
-  background-color: #2f5167;
+  background-color: #26d;
   color: #fff;
   height: 120px;
   padding: 40px;
