--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Avenir Next";
+  background-color:#dcdcdc;
 }
 
 li {
@@ -7,20 +8,23 @@ li {
 }
 
 .header {
-  background-color: #26d;
+  background-color: #b0c4de;
   color: #fff;
   height: 90px;
 }
 
 .header-logo {
-  float: left;
   font-size: 36px;
   padding: 20px 40px;
 }
 
+.header-list li {
+  float: left;
+  padding: 33px 20px;
+}
+
 .main {
-  background-image: url(IMG_0228.jpg);
-  background-size: cover;
+  padding: 100px 80px;
 }
 
 .copy-container h1 {
@@ -43,34 +47,27 @@ li {
 .section-title {
   border-bottom: 2px solid #dee7ec;
   font-size: 28px;
-  padding-bottom: 15px;
-  margin-bottom: 50px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .contents-item {
-  float: left;
-  margin-right: 40px;
+  border-bottom: 2px solid #dee7ec;
+  font-size: 28px;
+  padding-bottom: 5px;
+  margin-bottom:5px;
 }
-
-.contents-item p {
-  font-size: 24px;
-  margin-top: 30px;
+.content-item {
+  border-bottom: 2px solid #dee7ec;
+  font-size: 28px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
 }
-
-.contact-form {
-  padding-top: 100px;
-}
-
-/* inputとtextareaのCSSを指定してください */
-
-
-/* contact-submitのCSSを指定してください */
-
 
 .footer {
-  background-color: #26d;
+  background-color: #b0c4de;
   color: #fff;
-  height: 120px;
+  height: 90px;
   padding: 40px;
 }
 
